<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/recived"
        android:id="@+id/img_send_otp"
        android:contentDescription="@string/todo1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification_"
        android:textSize="20sp"
        android:textColor="@color/colortextfirst"
        android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/please_enter_otp_sent_to_your_mobile_number"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text=""
            android:id="@+id/txtmobileno"
            android:textColor="@color/colortextsecond"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/input1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,Label1For,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/input2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,Label1For,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/input3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,Label1For,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/input4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,Label1For,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/input5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label1For,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/input6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,Label1For,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_t_receive_otp"
                android:textColor="@color/colortextsecond"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_otp_again"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:id="@+id/sendotp_again"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verfiy"
            android:id="@+id/btnsubmit"
            android:layout_margin="30dp"
            android:background="@drawable/backgroundbutton"
            android:textColor="@color/colortextfirst"
            android:textSize="16sp"
            android:textStyle="bold"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/probar2"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>